--- a/Backend - Java/src/main/resources/.env
+++ b/Backend - Java/src/main/resources/.env
@@ -1,1 +1,2 @@
-MONGO_PASSWORD="Sharewin87"
+MONGO_DATABASE="mongodb+srv://NAMoura:Sharewin87@cluster0.mwukc9l.mongodb.net/?retryWrites=true&w=majority"
+MONGO_USER="rsn00b"
