--- a/Backend - Java/src/main/resources/application.properties
+++ b/Backend - Java/src/main/resources/application.properties
@@ -1,2 +1,2 @@
 spring.data.mongodb.uri=${env.MONGO_DATABASE}
-spring.data.mongodb.database=${env.MONGO_USER}
+spring.data.mongodb.database=${env.MONGO_USERNAME}
